--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 </head>
 <body>
     <section class="container">
-        <div class="row mt-5">
+        <div class="row text-center">
             <div class=" col-sm-12 col-md-12 col-lg-12">
-                <h1>The Strong Password Generator powered by Joaness                </h1>
+                <h1>The Strong Password Generator</h1>
                 <p>Generate secure, random passwords to stay safe online. </p>
         
             </div>
