--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
 <body>
     <section class="container">
         <div class="row text-center">
-            <div class=" col-sm-12 col-md-12 col-lg-12">
+            <div class=" col-sm-12">
                 <h1>The Strong Password Generator</h1>
                 <p>Generate secure, random passwords to stay safe online. </p>
+                <p>Password should contain atleast a special character, a number, uppercase letter and lowercase letter.</p>
         
             </div>
         </div>
 
         <div class="row">
-            <div class="col-sm-12 col-md-12 col-lg-12">
+            <div class="col-sm-12">
                 <form>
 
                     <div class="form-group">
@@ -31,7 +32,7 @@
                         <input class="form-control" id="txtPassWord" placeholder="Enter your password"></input>
                     </div>
 
-                    <div class="form-group">
+                    <div class="form-group align-center">
                         <button id="btnSubmit">Check for strong password</button>
                     </div>                    
                 </form>
