--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
             <div class="col-sm-12">
                 <form>
 
-                    <div class="form-group">
+                    <div class="form-group form">
                     
                         <input class="form-control" id="txtPassWord" placeholder="Enter your password"></input>
                     </div>
 
-                    <div class="form-group align-center">
+                    <div class="form-group align-center form">
                         <button id="btnSubmit">Check for strong password</button>
                     </div>                    
                 </form>
