--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
                     <div class="form-group form">
                     
-                        <input class="form-control" id="txtPassWord" placeholder="Enter your password"></input>
+                        <input class="form-control" id="txtPassWord" placeholder="Enter your password" autofocus></input>
                     </div>
 
                     <div class="form-group align-center form">
@@ -53,7 +53,7 @@
          let txtPassWord = document.getElementById("txtPassWord");
         let showPassWord = document.getElementById("showPassWord");
 
-        txtPassWord.addEventListener("input", passWord);
+        txtPassWord.addEventListener("keyup", passWord);
 
         function passWord(e) {
             e.preventDefault();
